# waypoints_nav

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: waypoints_nav.launch
nodes/: waypoints_nav
saved_path/: pose.csv
src/: follow_waypoints.py  waypoints_nav.py
src/waypoints_nav/: waypoints_nav.py
