<package>
  <name>waypoints_nav</name>
  <version>0.1.0</version>
  <description>
      This package is based on the follow_waypoints package (https://github.com/danielsnider/follow_waypoints).
      The package has been modified in order to accept PoseStamped instead of PoseWithCovarianceStamped messages.
      Furthermore, it has been extended to allow the navigation following the waypoints in both directions.
      This means, that it is possible to start the navigation towards the goal, and then to go back to the starting position
      via the same waypoints.
  </description>
  <maintainer email="danielsnider12@gmail.com">Daniel Snider</maintainer>
  <author email="danielsnider12@gmail.com">Daniel Snider</author>
  <license>Unlicense</license>
  <url type="website">http://wiki.ros.org/follow_waypoints</url>
  <url type="repository">https://github.com/danielsnider/follow_waypoints</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
